--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,15 +6,8 @@ on:
     branches: [ master ]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
-    - uses: actions/setup-java@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-        cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Build the Docker image and Push
