--- a/.github/workflows/actioninteg.yml
+++ b/.github/workflows/actioninteg.yml
@@ -20,4 +20,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: zakariaabdelalizakaria/new-web-app:latest
+          tags: zakariaabdelalizakaria/studenten-app-repo:latest,zakariaabdelalizakaria/studenten-app-repo:latest2
