--- a/.github/workflows/actioninteg.yml
+++ b/.github/workflows/actioninteg.yml
@@ -12,14 +12,16 @@ jobs:
       - name: Build container
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v1
+        with:
+          version: v0.7.0
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
       - name: Build and push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v2
         with:
           push: true
           tags: zakariaabdelalizakaria/studenten-app-repo:latest,zakariaabdelalizakaria/studenten-app-repo:latest2
