--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,10 @@ jobs:
     steps:
       - uses: actions/setup-java@v3
       - name: Set up JDK 11
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v1
         with:
-          java-version: '11'
-          distribution: 'temurin'
+          java-version: '12'
+          distribution: 'adopt'
           cache: maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
