--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+        
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -13,6 +14,7 @@ jobs:
           distribution: 'adopt'
           cache: maven   
       - name: Build the Docker image and Push
+        working-directory: .     
         run: |
           echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin docker.io
           docker build . -f ./Dockerfile --tag docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest
