--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,8 @@ jobs:
           java-version: '12'
           distribution: 'adopt'
           cache: maven 
-          working-directory: ./SystenIntegrationWebApp
       - name: Build the Docker image and Push
-        working-directory: ./SystenIntegrationWebApp     
+        working-directory: ../ ../ ../     
         run: |
           echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin docker.io
           docker build . -f ./Dockerfile --tag docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest
