--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+name: Maven Build + Docker build und DockerHub push
 on:
   push:
     branches: [ master ]  
@@ -7,12 +8,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         
-      - name: Set up JDK 11
+      - name: Set up JDK 12
         uses: actions/setup-java@v1
         with:
           java-version: '12'
           distribution: 'adopt'
           cache: maven  
+      - name: Build with Maven 
+        run: mvn -B package --file pom.xml
+        working-directory: ../../SystenIntegrationWebApp    
       - name: Build the Docker image and Push
         working-directory: ../../SystenIntegrationWebApp    
         run: |
