--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 HELP.md
 #target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+#!.mvn/wrapper/maven-wrapper.jar
+#!**/src/main/**/target/
+#!**/src/test/**/target/
 src/main/resources/application.properties
 *.properties
 ### STS ###
