--- a/.github/workflows/hgjg.yml
+++ b/.github/workflows/hgjg.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn -B package --file ./pom.xml
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
