--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 HELP.md
-#target/
-#!.mvn/wrapper/maven-wrapper.jar
-#!**/src/main/**/target/
-#!**/src/test/**/target/
-src/main/resources/application.properties
-*.properties
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 ### STS ###
 .apt_generated
 .classpath
