--- a/.github/workflows/hgjg.yml
+++ b/.github/workflows/hgjg.yml
@@ -27,6 +27,14 @@ jobs:
           
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
+        
+        
+      - name: Set up JDK 12
+        uses: actions/setup-java@v1
+        with:
+          java-version: '12'
+          distribution: 'adopt'
+          cache: maven
       - name: Build with Maven
         run: mvn -B package --file ./pom.xml
 
