--- a/.github/workflows/hgjg.yml
+++ b/.github/workflows/hgjg.yml
@@ -34,7 +34,7 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
       - name: Build with Maven
-        run: mvn -B package --file ./pom.xml
+        run: mvn --batch-mode --update-snapshots package
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
