--- a/.github/workflows/hgjg.yml
+++ b/.github/workflows/hgjg.yml
@@ -38,6 +38,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        with:
+          version: v0.7.0
         
       - name: Login to GHCR
         uses: docker/login-action@v1
