--- a/.github/workflows/integ.yml
+++ b/.github/workflows/integ.yml
@@ -14,6 +14,14 @@ jobs:
     steps:
       - name: Check out
         uses: actions/checkout@v3
+      - name: Docker meta
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
+        with:
+          images: docker.io/zakariaabdelalizakaria/studenten-app-repo
+          tag-sha: true
+          tag-edge: false
+          tag-latest: true
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -27,12 +35,26 @@ jobs:
         run: mvn verify
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
+      - name: Login to GHCR
+        uses: docker/login-action@v1
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: Build image
+        uses: docker/build-push-action@v2
+        with:
+          tags: ${{ steps.docker_meta.outputs.tags }}
+          file: ./Dockerfile
+
+      - name: Push image
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ steps.docker_meta.outputs.tags }}
+          file: ./Dockerfile
 
 
-      - name: Build the Docker image and Push
-        run: |
-          echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin docker.io
-          docker build . --file Dockerfile 
-          docker push docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest
-
+    
          
