--- a/.github/workflows/integ.yml
+++ b/.github/workflows/integ.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+          cache: maven
       - name: Build with Maven verify
         run: mvn verify
       - name: Build with Maven package
