--- a/.github/workflows/integ.yml
+++ b/.github/workflows/integ.yml
@@ -1,61 +1,35 @@
-name: Publish Docker Image
+name: Publish Docker image
 
 on:
   push:
     branches: [ master ]
   release:
-    types:
-      - published
+    types: [published]
 
 jobs:
-
-  build:
+  push_to_registry:
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
-      - name: Check out
+      - name: Check out the repo
         uses: actions/checkout@v3
-      - name: Docker meta
-        id: docker_meta
-        uses: crazy-max/ghaction-docker-meta@v1
+      
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
-          images: docker.io/zakariaabdelalizakaria/studenten-app-repo
-          tag-sha: true
-          tag-edge: false
-          tag-latest: true
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-          cache: maven
-      - name: Build with Maven verify
-        run: mvn verify
-      - name: Build with Maven package
-        run: mvn --batch-mode --update-snapshots package
-      - name: Login to GHCR
-        uses: docker/login-action@v1
-        with:
-          registry: docker.io
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-      - name: Build image
-        uses: docker/build-push-action@v2
+      
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          file: ./Dockerfile
-
-      - name: Push image
-        uses: docker/build-push-action@v2
+          images: zakariaabdelalizakaria/seconp-app-image-repo
+      
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
+          context: .
           push: true
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          file: ./Dockerfile
-
-
-    
-         
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
