--- a/.github/workflows/integ.yml
+++ b/.github/workflows/integ.yml
@@ -1,35 +1,37 @@
-name: Publish Docker image
+name: Publish Docker Image
 
 on:
   push:
     branches: [ master ]
   release:
-    types: [published]
+    types:
+      - published
 
 jobs:
-  push_to_registry:
-    name: Push Docker image to Docker Hub
+
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out the repo
+      - name: Check out
         uses: actions/checkout@v3
-      
-      - name: Log in to Docker Hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
-      
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: zakariaabdelalizakaria/seconp-app-image-repo
-      
-      - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          java-version: '17'
+          distribution: 'adopt'
+          cache: maven  
+    
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots package
+
+
+      - name: Build the Docker image and Push
+        run: |
+          echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin docker.io
+          docker build . --file Dockerfile --tag docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest
+          docker push docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest
