--- a/.github/workflows/integ.yml
+++ b/.github/workflows/integ.yml
@@ -32,5 +32,5 @@ jobs:
       - name: Build the Docker image and Push
         run: |
           echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin docker.io
-          docker build . --file Dockerfile --tag docker.io/zakariaabdelalizakaria/seconp-app-image-repo:latest
+          docker build . --file Dockerfile --tag docker.io/${{ format('{0}/{1}', secrets.DOCKER_HUB_USERNAME, secrets.DOCKER_HUB_REPOSITORY) }}:latest
           docker push docker.io/zakariaabdelalizakaria/seconp-app-image-repo:latest
