--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
     </dependencies>
 
     <build>
+        <finalName>studenten-app-snapschot</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
