--- a/.github/workflows/integ.yml
+++ b/.github/workflows/integ.yml
@@ -27,7 +27,7 @@ jobs:
           cache: maven  
     
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots package -Dmaven.test.skip
+        run: mvn --batch-mode --update-snapshots package 
 
       - name: Build the Docker image and Push
         run: |
