--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://studentsdb.cln4mzba5bkk.us-east-1.rds.amazonaws.com:3306/students
+spring.datasource.url=jdbc:mysql://studenten-db-v2.cln4mzba5bkk.us-east-1.rds.amazonaws.com:3306/studenten_db_v2
 spring.datasource.username=zakaria
 spring.datasource.password=zakariadb
 #Hibernate
